<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/rate_padding" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/rate_me_text" />
    
    <Button
        android:id="@+id/btnRateNow"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/rate_now"
        android:textColor="@android:color/black"
        android:textSize="@dimen/rate_me_button" />

    <Button
        android:id="@+id/btnNotNow"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/not_now"
        android:textColor="@android:color/black"
        android:textSize="@dimen/rate_me_button" />

    <Button
        android:id="@+id/btnDontAskAgain"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/dont_ask_me_again"
        android:textColor="@android:color/black"
        android:textSize="@dimen/rate_me_button" />

</LinearLayout>